@@ -12,7 +12,7 @@ class TestHashSource(unittest.TestCase):
     def test_hash_parser_source_files(self):
         source_hash = hashsrc.hash_parser_source_files()
         self.assertTrue(isinstance(source_hash, str))
-        self.assertEqual(32, len(source_hash))
+        self.assertEqual(33, len(source_hash))
 
     def test_check_parser_source_files(self):
         hashsrc.check_parser_source_files()
