@@ -4,6 +4,12 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2017-07-05
+
+  - Fixed #173: Added a potential fix for building under MSDEV. Thanks to Alan
+    Ray for pointing out a method to build with MSDEV under Windows.
+
+
 2017-06-25
 
   - Fixed a minor bug in the tolerance inference code that wouldn't accept a
